# whiteboard-detection

./: README.md  mask_rcnn.py  pyproject.toml
mrcnn/: model.py
recognition/: model.py  recognizer.py
text_detection/: __init__.py  model.py
